[package]
authors = ["Daniel Campoverde <alx@sillybytes.net>"]
edition = "2018"
readme = "README.md"
name = "olivaw"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
panic-halt = "0.2.0"
panic-semihosting = "0.5.1"
nb = "0.1.1"
ufmt = "0.1.0-beta.4"

[dependencies.stm32f1xx-hal]
version = "0.2.0"
features = ["stm32f103", "rt"]

[dependencies.mpu9250]
version = "0.7.4"

# Uncomment for the panic example.
# panic-itm = "0.4.0"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

# this lets you use `cargo fix`!
[[bin]]
name = "olivaw"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
